2009-04-13  Ozkan Sezer  <sezeroz@gmail.com>
	* gdtoa/dmisc.c, gdtoa/dtoa.c, gdtoa/g__fmt.c, gdtoa/g_dfmt.c,
	gdtoa/g_ffmt.c, gdtoa/g_xfmt.c, gdtoa/gdtoa.c, gdtoa/gdtoa.h,
	gdtoa/gdtoaimp.h, gdtoa/gethex.c, gdtoa/gmisc.c, gdtoa/hd_init.c,
	gdtoa/hexnan.c, gdtoa/misc.c, gdtoa/smisc.c, gdtoa/strtodg.c,
	gdtoa/strtodnrp.c, gdtoa/strtof.c, gdtoa/strtopx.c, gdtoa/sum.c,
	gdtoa/ulp.c: Removed all KR_headers stuff along with ANSI, CONST,
	Void and Char things. Aligned the closing braces with the opening
	braces (wnitespace.)

2009-04-13  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/dtoa.c, gdtoa/gdtoa.c, gdtoa/gdtoaimp.h, gdtoa/misc.c,
	gdtoa/smisc.c, gdtoa/strtodg.c gdtoa/ulp.c: Fixed gcc-4.4 strict
	aliasing issues by adding some ifdef magic. strtopx.c still needs
	some more work.

2009-04-13  Kai Tietz  <kai.tietz@onevision.com>

	* crtexe.c (__mingw_vex): Removed.
	Don't initialize gs:0 by -1.

2009-04-12  Ozkan Sezer  <sezeroz@gmail.com>

	* gdtoa/misc.c (b2d): Don't initialize d to 0.0 despite the 'd is
	used uninitialized' warning, otherwise gcc >= 4.4 miscompiles this
	with >= -O2.  Should stay this way until at least gcc is fixed.

2009-04-08  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crtexe.c (__mingw_AddVectoredExceptionHandler): Removed.
	Don't call AddVectoredExceptionHandler in 32-bit case.
	Don't set fs:[0] to -1.
	* misc/delayimp.c (PULONG): Don't define in 32-bit case.

2009-04-01  Kai Tietz  <kai.tietz@onevision.com>

        PR/2723829
        * misc/mingw_getsp.S: Fix wrong .code64.

2009-03-28  Kai Tietz  <kai.tietz@onevision.com>

	* misc/fesetenv.c: Replace _imp__<sym> by __MINGW_IMP_SYMBOL(sym).
	* complex/cpow.c: Likewise.
	* include/internal.h: Likewise.
	* crt/CRT_fp8.c: Likewise.
	* crt/atonexit.c: Likewise.
	* crt/crtexe.c: Likewise.

2009-03-17  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crtexe.c (wmainCRTStartup): Rename it to mainCRTStartup.
	(wWinMainCRTStartup): Rename to wWinMainCRTStartup.