@@ -146,11 +146,7 @@ char *__gdtoa (FPI *fpi, int be, ULong *bits, int *kindp, int mode, int ndigits,
 	Long L;
 	Bigint *b, *b1, *delta, *mlo, *mhi, *mhi1, *S;
 	double d2, ds;
-#ifdef __HAVE_GCC44
 	union _dbl_union d, eps;
-#else
-	double d, eps;
-#endif
 	char *s, *s0;
 
 #ifndef MULTIPLE_THREADS
@@ -194,10 +190,6 @@ char *__gdtoa (FPI *fpi, int be, ULong *bits, int *kindp, int mode, int ndigits,
 	i = be + bbits - 1;
 	word0(d) &= Frac_mask1;
 	word0(d) |= Exp_11;
-#ifdef IBM
-	if ( (j = 11 - hi0bits(word0(d) & Frac_mask)) !=0)
-		dval(d) /= 1 << j;
-#endif
 
 	/* log(x)	~=~ log(1.5) + (x-1.5)/1.5
 	 * log10(x)	 =  log(x) / log(10)
@@ -220,10 +212,6 @@ char *__gdtoa (FPI *fpi, int be, ULong *bits, int *kindp, int mode, int ndigits,
 	 * (We could get a more accurate k by invoking log10,
 	 *  but this is probably not worthwhile.)
 	 */
-#ifdef IBM
-	i <<= 2;
-	i += j;
-#endif
 	ds = (dval(d)-1.5)*0.289529654602168 + 0.1760912590558 + i*0.301029995663981;
 
 	/* correct assumption about exponent range */
@@ -236,14 +224,7 @@ char *__gdtoa (FPI *fpi, int be, ULong *bits, int *kindp, int mode, int ndigits,
 	if (ds < 0. && ds != k)
 		k--;	/* want k = floor(ds) */
 	k_check = 1;
-#ifdef IBM
-	j = be + bbits - 1;
-	if ( (j1 = j & 3) !=0)
-		dval(d) *= 1 << j1;
-	word0(d) += j << Exp_shift - 2 & Exp_mask;
-#else
 	word0(d) += (be + bbits - 1) << Exp_shift;
-#endif
 	if (k >= 0 && k <= Ten_pmax) {
 		if (dval(d) < tens[k])
 			k--;
@@ -322,10 +303,6 @@ char *__gdtoa (FPI *fpi, int be, ULong *bits, int *kindp, int mode, int ndigits,
 
 		i = 0;
 		d2 = dval(d);
-#ifdef IBM
-		if ( (j = 11 - hi0bits(word0(d) & Frac_mask)) !=0)
-			dval(d) /= 1 << j;
-#endif
 		k0 = k;
 		ilim0 = ilim;
 		ieps = 2; /* conservative */
