@@ -65,36 +65,18 @@ Bigint *s2b (const char *s, int nd0, int nd, ULong y9)
 
 double ratio (Bigint *a, Bigint *b)
 {
-#ifdef __HAVE_GCC44
 	union _dbl_union da, db;
-#else
-	double da, db;
-#endif
 	int k, ka, kb;
 
 	dval(da) = b2d(a, &ka);
 	dval(db) = b2d(b, &kb);
 	k = ka - kb + ULbits*(a->wds - b->wds);
-#ifdef IBM
-	if (k > 0) {
-		word0(da) += (k >> 2)*Exp_msk1;
-		if (k &= 3)
-			dval(da) *= 1 << k;
-	}
-	else {
-		k = -k;
-		word0(db) += (k >> 2)*Exp_msk1;
-		if (k &= 3)
-			dval(db) *= 1 << k;
-	}
-#else
 	if (k > 0)
 		word0(da) += k*Exp_msk1;
 	else {
 		k = -k;
 		word0(db) += k*Exp_msk1;
 	}
-#endif
 	return dval(da) / dval(db);
 }
 
