@@ -34,20 +34,13 @@ THIS SOFTWARE.
 double ulp (double x)
 {
 	Long L;
-#ifdef __HAVE_GCC44
 	union _dbl_union a;
+
 	a.d = x;
 	L = (word0(a) & Exp_mask) - (P-1)*Exp_msk1;
-#else
-	double a = 0.0;
 
-	L = (word0(x) & Exp_mask) - (P-1)*Exp_msk1;
-#endif
 #ifndef Sudden_Underflow
 	if (L > 0) {
-#endif
-#ifdef IBM
-		L |= Exp_msk1 >> 4;
 #endif
 		word0(a) = L;
 		word1(a) = 0;
@@ -66,9 +59,5 @@ double ulp (double x)
 		}
 	}
 #endif
-#ifdef __HAVE_GCC44
 	return dval(a);
-#else
-	return a;
-#endif
 }
